--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,10 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="addPadding">
                             <!--add condition to loop throught users array to get name for logged in user email-->
-                            <p ng-repeat="key in users" ng-if="key.email == email" ng-show="showLogout">{{key.name}}</p>
+                            <p ng-repeat="key in users" ng-if="key.email == email" ng-show="showLogout" ng-bind="key.name"></p>
                         </li>
                         <!--log user out -->
-                        <li><a href="#" ng-click="logout()" ng-show="showLogout">{{loginText}}</a></li>
+                        <li><a href="#" ng-click="logout()" ng-show="ifLoggedIn" ng-bind="loginText"></a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
 
@@ -86,12 +86,12 @@
         <script src="scripts/directives/check-nav.js"></script>
 
         <!--controllers-->
-        <script src="scripts/controllers/MainController.js"></script>
-        <script src="scripts/controllers/DeviceListController.js"></script>
-        <script src="scripts/controllers/CheckedInController.js"></script>
-        <script src="scripts/controllers/CheckedOutController.js"></script>
-        <script src="scripts/controllers/LoginFormController.js"></script>
-        <script src="scripts/controllers/AddDeviceController.js"></script>
+        <script src="scripts/controllers/main-controller.js"></script>
+        <script src="scripts/controllers/device-list-controller.js"></script>
+        <script src="scripts/controllers/checked-in-controller.js"></script>
+        <script src="scripts/controllers/checked-out-controller.js"></script>
+        <script src="scripts/controllers/login-form-controller.js"></script>
+        <script src="scripts/controllers/add-device-controller.js"></script>
 
         <!-- endbuild -->
 </body>
